force-app/main/default/objects/SFQPConnector__c/SFQPConnector__c.object-meta.xml
<CustomObject>
    <description>This is a SFQPConnector object</description>
    <label>SFQPConnector</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>SFQPConnector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFQPConnector</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>