force-app/main/default/objects/SFQPConnector__c/fields/MessageSent__c.field-meta.xml
<CustomField>
    <fullName>MessageSent__c</fullName>
    <label>MessageSent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>