force-app/main/default/objects/SFQPConnector__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>AccountOffice</fullName>
            </value>
            <value>
                <fullName>AccountStockholder</fullName>
            </value>
            <value>
                <fullName>AccountType</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>