force-app/main/default/objects/SFQPConnector__c/fields/QPMessage__c.field-meta.xml
<CustomField>
    <fullName>QPMessage__c</fullName>
    <label>QPMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>