force-app/main/default/objects/SFQPConnector__c/fields/QPStatus__c.field-meta.xml
<CustomField>
    <fullName>QPStatus__c</fullName>
    <label>QPStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Failed-SFQP</fullName>
            </value>
            <value>
                <fullName>Failed-Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>