force-app/main/default/objects/SFQPConnector__c/fields/relatedid__c.field-meta.xml
<CustomField>
    <fullName>relatedid__c</fullName>
    <label>relatedid</label>
    <length>25</length>
    <type>Text</type>
</CustomField>