force-app/main/default/objects/SFQPConnector__c/fields/SFDC_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Transaction_ID__c</fullName>
    <label>SFDC Transaction ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>