force-app/main/default/objects/SFQPConnector__c/fields/SFMessageID__c.field-meta.xml
<CustomField>
    <fullName>SFMessageID__c</fullName>
    <label>SFMessageID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>