force-app/main/default/objects/SFQPConnector__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>relatedid__c</columns>
    <columns>SFMessageID__c</columns>
    <columns>ObjectType__c</columns>
    <columns>QPMessage__c</columns>
    <columns>QPStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>