force-app/main/default/objects/SFQPConnector__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>QPMessage__c</columns>
    <columns>QPStatus__c</columns>
    <columns>NAME</columns>
    <columns>SFDC_Transaction_ID__c</columns>
    <columns>relatedid__c</columns>
    <columns>ObjectType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>