force-app/main/default/objects/SFQPConnector__c/listViews/QP_Status_Sent_Last_3_Days.listView-meta.xml
<ListView>
    <fullName>QP_Status_Sent_Last_3_Days</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>SFMessageID__c</columns>
    <columns>SFDC_Transaction_ID__c</columns>
    <columns>ObjectType__c</columns>
    <columns>QPStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>QPMessage__c</columns>
    <columns>Case__c</columns>
    <columns>MessageSent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QPStatus__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <label>QP Status Sent - Last 3 Days</label>
</ListView>